--- a/toplist/framework/css/my-bootstrap.css
+++ b/toplist/framework/css/my-bootstrap.css
@@ -1,51 +1,19 @@
-*{
-    outline: 1px solid red !important;
+* {
+    border: 1px solid red !important;
 }
 
-*{
+* {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 500px){
     p {
         background-color: blue;
     }
 }
-
-.title{
-    background-color: #33BEBE;
-    color: white;
-    font-size: 28px;
-    font-family: monospace;
-}
-
-.app{
-    display: -webkit-flex;
-    display: flex;
-}
-
-
-.description {
-    max-width: 705px;
-    color: #7C8b88;
-    margin: 10px;
-    font-family: cursive;
-}
-
-.screenshot{
-    max-width: 460px;
-    width: auto;
-    margin: 10px;
-}
-
-.screenshot img{
-    max-width: 460px;
-    width: auto;
-}
-
 .grid {
     margin: 0 auto;
     max-width: 1200px;
