--- a/quiz-project-2/Start/tweaks.css
+++ b/quiz-project-2/Start/tweaks.css
@@ -8,7 +8,7 @@ body {
 }
 
 .snippet__thumbnail > img {
-	width: 100%
+	width: 100%;
 }
 
 .snippet {
@@ -17,11 +17,18 @@ body {
 }
 
 .snippet__title {
+	order: 0;
+	width: 100%;
+	margin: 0 0 0.5em;
+}
+
+.snippet__thumbnail 
+{
 	order: 1;
 	width: 30%;
 }
 
-.snippet_description {
+.snippet__description{
 	order: 2;
 	width: 70%;
 	margin: 0;
@@ -43,14 +50,54 @@ body {
 	}
 }
 
-@media screen and (max-width: 550px) {
-	.scores__table, .scores__location {
+@media screen and (max-width: 550px)
+{
+	.scores__table .scores__location {
 		display: none;
 	}
 }
 
-@media screen and (max-width: 649px) {
+@media screen and (max-width: 649px) 
+{
+	.snippet__title
+	{	
+	}
+
+	.snippet__thumbnail {
+		width: 30%;
+		margin: 0;
+	}
+
+	.snippet__description {
+		-webkit-line-clamp: 3;
+		max-height: 3.7em;
+	}
+}
+
+@media screen and (min-width: 650px)
+{
 	.snippet__title {
-		
+	}
+
+	.snippet__thumbnail 
+	{
+		width: 30%;
+		height: 150px;
+		margin-right: 0;
+	}
+
+	.snippet__description 
+	{
+		-webkit-line-clamp: 4;
+		max-height: 4.9em;
+	}
+
+}
+
+@media screen and (min-width: 700px)
+{
+	.scores__table
+	{
+		font-size: 12px;
 	}
 }
