fixed all the bugs

--- a/quiz-project-2/Start/main.css
+++ b/quiz-project-2/Start/main.css
@@ -19,6 +19,10 @@ header, nav, footer, section, article, div {
   box-sizing: border-box;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -67,8 +71,8 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
-  margin: 0.5em 0.25em;
+  font-size: 3em;
+  margin: 0.75em 0.25em;
   display: inline-block;
   color: #212121;
 }
@@ -145,7 +149,7 @@ main {
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
-  height: 300px;
+  min-height: 300px;
 }
 
 .hero article {
@@ -154,7 +158,6 @@ main {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 0;
-  height: 40%;
   width: 100%;
   color: #fff;
   padding: 1em;
@@ -168,9 +171,9 @@ main {
  */
 
 .top-news {
-  height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
+  width: 100%;
 }
 
 .news__title {
@@ -214,6 +217,7 @@ main {
 
 .scores {
   padding-top: 1em;
+  flex-grow: 1;
 }
 
 .scores__table {
@@ -260,6 +264,7 @@ main {
  */
 
 .weather {
+  flex-grow: 1;
   padding: 1em;
 }
 
@@ -314,6 +319,7 @@ main {
  */
 
 .recent-news {
+  flex-grow: 1;
   clear: both;
   padding: 1em;
 }
